added create teacher

--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -4,29 +4,29 @@
 <div class="card">
     <section
     class="avatar" 
-    style="background: url(https://source.unsplash.com/collection/3465564/500x500) no-repeat center center / cover"></section>
+    style="background: url(https://source.unsplash.com/collection/517198/500x500) no-repeat center center / cover"></section>
     <section class="details">
-        <h3>Detalhes</h3>
+        <h3>Details</h3>
         <div class="item">
-            <div>Instrutor</div>
+            <div>Teacher</div>
             <div>Guilherme Saraiva</div>
         </div>
 
         <div class="item">
-            <div>Idade</div>
-            <div>29</div>
+            <div>Education level</div>
+            <div>Master degree</div>
         </div>
 
         <div class="item">
-            <div>Sexo</div>
-            <div>Masculino</div>
+            <div>Type of class</div>
+            <div>Online</div>
         </div>
 
         <div class="item">
-            <div>Acompanhamento</div>
+            <div>Subjects</div>
             <div>
-                <span>Musculação</span>
-                <span>Crossfit</span>
+                <span>Geography</span>
+                <span>English</span>
             </div>
         </div>
 
