--- a/views/layout.njk
+++ b/views/layout.njk
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}
-        <title>Gym Manager</title>
+        <title>Online Classes</title>
     {% endblock %}
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
         <div class="links">
-            <a href="/" class="active">Instructors</a>
-            <a href="/members">Members</a>
+            <a href="/" class="active">Teachers</a>
+            <a href="/students">Students</a>
         </div>
     </header>
 
