--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -6,8 +6,7 @@
     class="avatar" 
     style="background: url(https://source.unsplash.com/collection/517198/500x500) no-repeat center center / cover"></section>
     <section class="details">
-        <h3>New teacher</h3>
-
+        <h3>Edit teacher</h3>
         {% include 'instructors/fields.njk' %}
 
     </section>
